# android-rasp

./: .aiexclude  .gitignore  README.md  TODO  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml
buildSrc/src/main/java/com/securevale/rasp/android/: Deps.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native/: .gitignore  Cargo.toml  build.sh
native/src/: build.rs  common.rs  debuggable.rs  emulator.rs  files.rs  info.rs  lib.rs  root.rs  system.rs  util.rs
native/src/common/: build.rs  files.rs  info.rs  logging.rs  package.rs  property.rs  system.rs
native/src/emulator/: device.rs  general.rs  packages.rs  properties.rs  sensors.rs
native/src/root/: packages.rs  properties.rs  superuser.rs
rasp/: .gitignore  build.gradle.kts  consumer-rules.pro
rasp/config/: detekt.yml
rasp/src/main/: AndroidManifest.xml
rasp/src/main/java/com/securevale/rasp/android/: SecureApp.kt
rasp/src/main/java/com/securevale/rasp/android/api/: CheckSubscriber.kt  Result.kt  SecureAppChecker.kt
rasp/src/test/java/com/securevale/rasp/: TestBaseClass.kt
sample-app/: build.gradle.kts
sample-app/src/main/: AndroidManifest.xml
sample-app/src/main/res/drawable/: green_check.xml  red_check.xml
sample-app/src/main/res/layout/: activity_main.xml  activity_test.xml  fragment_check.xml  fragment_test_result.xml  item_check.xml  item_check_result.xml  test_button.xml
sample-app/src/main/res/values/: colors.xml  strings.xml  themes.xml
sample-app/src/main/res/values-night/: themes.xml
(+61 files in other folders)
